修复 布局问题

--- a/app/main.html
+++ b/app/main.html
@@ -135,10 +135,10 @@
                                             <div class="mdui-progress-indeterminate mdui-color-blue-300"></div>
                                         </div>
                                         <button class="mdui-btn mdui-btn-block mdui-color-grey-300 mdui-ripple running-status-bar">
-                                         elapsed time:<span id="running-status-bar-time"> 00:00:00 <span>
-                                         pass:<span id="running-status-bar-pass"> 0 <span>
-                                         fail:<span id="running-status-bar-fail"> 0 <span>
-                                    </button>
+                                         elapsed time:<span id="running-status-bar-time"> 00:00:00 </span>
+                                         pass:<span id="running-status-bar-pass"> 0 </span>
+                                         fail:<span id="running-status-bar-fail"> 0 </span>
+                                        </button>
                                     </div>
                                     <div class='frameset' rows="50%,*">
                                         <div id="console_log">
