优化 listener使用socket发消息

--- a/app/main.html
+++ b/app/main.html
@@ -331,6 +331,8 @@
 
     <script type="text/javascript" src="assets/js/run.js"></script>
 
+    <script type="text/javascript" src="assets/js/server.js"></script>
+
 
 </body>
 
