新增 查看report、log功能

--- a/app/main.html
+++ b/app/main.html
@@ -35,6 +35,8 @@
                 <a href="javascript:;" class="mdui-btn mdui-btn-icon no-drag"><i class="mdui-icon material-icons">save</i></a>
                 <a href="javascript:;" class="mdui-btn mdui-btn-icon no-drag" onclick="runTest()"><i class="mdui-icon material-icons">play_circle_outline</i></a>
                 <a href="javascript:;" class="mdui-btn mdui-btn-icon no-drag"><i class="mdui-icon material-icons">remove_circle_outline</i></a>
+                <a href="javascript:;" class="mdui-btn mdui-btn-icon no-drag" id="openreport_btn" onclick="openReport(this)"><i class="mdui-icon material-icons">assessment</i></a>
+                <a href="javascript:;" class="mdui-btn mdui-btn-icon no-drag" id="openlog_btn" onclick="openLog(this)"><i class="mdui-icon material-icons">assignment</i></a>
                 <div class="mdui-toolbar-spacer"></div>
                 <a href="javascript:;" class="mdui-btn mdui-btn-icon no-drag"><i class="mdui-icon material-icons">remove</i></a>
                 <a href="javascript:;" class="mdui-btn mdui-btn-icon no-drag"><i class="mdui-icon material-icons">crop_free</i></a>
