--- a/app/main.html
+++ b/app/main.html
@@ -132,34 +132,23 @@
                                 </div>
                                 <div id="top-tab-text-edit-content" class="mdui-p-a-0" style="border: solid 1px red;">shopping content</div>
                                 <div id="top-tab-run-content" class="mdui-p-a-0">
-                                    <div id="running-status-div" style="display:none">
+                                    <div id="running-status-div" style="display:none;">
                                         <div class="mdui-progress" id="running-status-progress">
                                             <div class="mdui-progress-indeterminate mdui-color-blue-300"></div>
                                         </div>
-                                        <button class="mdui-btn mdui-btn-block mdui-color-grey-300 mdui-ripple running-status-bar">
-                                         elapsed time:<span id="running-status-bar-time"> 00:00:00 </span>
-                                         pass:<span id="running-status-bar-pass"> 0 </span>
-                                         fail:<span id="running-status-bar-fail"> 0 </span>
+                                        <button class="mdui-btn mdui-btn-block mdui-color-grey-300 mdui-ripple running-status-bar" id="running-status-bar">
+                                         Elapsed time:<span id="running-status-bar-time"> 00:00:00 </span>
+                                         Pass:<span id="running-status-bar-pass"> 0 </span>
+                                         Fail:<span id="running-status-bar-fail"> 0 </span>
+                                         <span id="running-status-bar-current-keyword"> </span>
                                         </button>
                                     </div>
                                     <div class='frameset' rows="50%,*">
                                         <div id="console_log">
-                                            <p> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-                                                tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-                                                At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
-                                                gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem
-                                                ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-                                                tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-                                                At vero eos et accusam et justo. </p>
+
                                         </div>
                                         <div id="running_log">
-                                            <p> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-                                                tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-                                                At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
-                                                gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem
-                                                ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-                                                tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-                                                At vero eos et accusam et justo. </p>
+
                                         </div>
 
                                     </div>
@@ -325,6 +314,10 @@
     <!--引入快捷键-->
     <script type="text/javascript" src="plugin/keymaster/keymaster.js"></script>
     <script type="text/javascript" src="assets/js/shortcuts.js"></script>
+
+    <!--引入计算库-->
+    <script type="text/javascript" src="plugin/timerjquery/timer.jquery.min.js"></script>
+
 
 
     <script type="text/javascript" src="assets/js/worktree.js"></script>
