新增 关闭、最大化、最小化功能

--- a/app/main.html
+++ b/app/main.html
@@ -38,9 +38,9 @@
                 <a href="javascript:;" class="mdui-btn mdui-btn-icon no-drag" id="openreport_btn" onclick="openReport(this)"><i class="mdui-icon material-icons">assessment</i></a>
                 <a href="javascript:;" class="mdui-btn mdui-btn-icon no-drag" id="openlog_btn" onclick="openLog(this)"><i class="mdui-icon material-icons">assignment</i></a>
                 <div class="mdui-toolbar-spacer"></div>
-                <a href="javascript:;" class="mdui-btn mdui-btn-icon no-drag"><i class="mdui-icon material-icons">remove</i></a>
-                <a href="javascript:;" class="mdui-btn mdui-btn-icon no-drag"><i class="mdui-icon material-icons">crop_free</i></a>
-                <a href="javascript:;" class="mdui-btn mdui-btn-icon no-drag"><i class="mdui-icon material-icons">close</i></a>
+                <a href="javascript:;" class="mdui-btn mdui-btn-icon no-drag" id="minimize_app"><i class="mdui-icon material-icons">remove</i></a>
+                <a href="javascript:;" class="mdui-btn mdui-btn-icon no-drag" id="maximize_app"><i class="mdui-icon material-icons">crop_free</i></a>
+                <a href="javascript:;" class="mdui-btn mdui-btn-icon no-drag" id="close_app" ><i class="mdui-icon material-icons">close</i></a>
             </div>
         </header>
 
@@ -327,6 +327,8 @@
     <script type="text/javascript" src="assets/js/run.js"></script>
 
     <script type="text/javascript" src="assets/js/server.js"></script>
+
+    <script type="text/javascript" src="assets/js/app.js"></script>
 
 
 </body>
